Fix CMakeLists.txt for EMU
Fix WARDuino path
Add pthread lib to CMakeLists.txt
Remove build folders
Remove .vscode folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .idea/
-cmake-build-debug/
-cmake-build-release/
+.vscode/
 
 *.bin
 *.ipch
 *.o
+
+# Build folders
+build/
+cmake-build-debug/
+cmake-build-release/
 
 # MacOS
 .DS_Store
