--- a/ESPWASM/CMakeLists.txt
+++ b/ESPWASM/CMakeLists.txt
@@ -1,8 +1,8 @@
 # The following lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
-option(BUILD_ESP  "Build for esp " ON)
-option(BUILD_EMULATOR "Build for emulator" OFF)
+option(BUILD_ESP  "Build for esp " OFF)
+option(BUILD_EMULATOR "Build for emulator" ON)
 
 if(BUILD_ESP) 
 				include($ENV{IDF_PATH}/tools/cmake/project.cmake)
@@ -12,6 +12,7 @@ project(hello_world)
 
 # Build the emulator version of WARDuino
 if(BUILD_EMULATOR) 
+                                find_package(Threads REQUIRED)
 				set(SOURCE_FILES 
 								main/Memory/mem.cpp 
 								main/Utils/util.cpp 
@@ -26,6 +27,7 @@ if(BUILD_EMULATOR)
 
 				add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
 				add_executable(wdcli main/CLI-Emulator/main.cpp ${SOURCE_FILES})
+                                target_link_libraries(wdcli PRIVATE Threads::Threads)
 				add_definitions(-DINFO=0)
 				add_definitions(-DDEBUG=0)
 				add_definitions(-DTRACE=1)
