Update lock files npm

--- a/.github/workflows/debugger.yml
+++ b/.github/workflows/debugger.yml
@@ -20,6 +20,8 @@ jobs:
             
             - name: Set up Node.js
               uses: actions/setup-node@v1
+              with:
+                node-version: 14
 
             - name: Install Node.js dependencies
               run: npm ci
@@ -39,6 +41,8 @@ jobs:
 
             - name: Set up Node.js
               uses: actions/setup-node@v1
+              with:
+                node-version: 14
 
             - name: Install Node.js dependencies
               run: npm ci
