--- a/vs-debugger/package.json
+++ b/vs-debugger/package.json
@@ -70,6 +70,7 @@
     "unit-test": "mocha --ui tdd --require ts-node/register src/test/UnitTests/**/*.ts"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
@@ -87,6 +88,8 @@
     "vsce": "^2.5.1",
     "vscode-debugadapter": "^1.51.0-pre.0",
     "vscode-debugadapter-testsupport": "^1.51.0-pre.0"
-    
+  },
+  "dependencies": {
+    "chai": "^4.3.6"
   }
 }
