--- a/.github/workflows/debugger.yml
+++ b/.github/workflows/debugger.yml
@@ -28,50 +28,45 @@ jobs:
                 node-version: 14
 
             - name: Install Node.js dependencies
-              run: npm ci  # TODO should install ESLint
+              run: npm ci
 
             - name: Run ESLint
               run: npm run lint
 
-              #            - name: Run ESLint
-              #              uses: wearerequired/lint-action@v1
-              #              with:
-              #                  eslint: true
+    build-wabt:
+        name: Build custom WABT
+        runs-on: ubuntu-latest
+        
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
 
-                  #    build-wabt:
-                  #        name: Build custom WABT
-                  #        runs-on: ubuntu-latest
-                  #        
-                  #        steps:
-                  #            - name: Checkout
-                  #              uses: actions/checkout@v2
-                  #
-                  #            - name: Build from source
-                  #              run: |
-                  #                git clone --recursive https://github.com/TOPLLab/wabt
-                  #                cd wabt
-                  #                git submodule update --init
-                  #                mkdir build; cd build
-                  #                cmake ..
-                  #                cmake --build .
-                  #            
-                  #            - name: Update $PATH
-                  #              run: echo "${GITHUB_WORKSPACE}/wabt/build" >> $GITHUB_PATH
-                  #            
-                  #            - name: Echo $PATH
-                  #              run: echo $PATH
-                  #
-                  #            - name: Cache build files
-                  #              id: cache_wabt
-                  #              uses: actions/cache@v2
-                  #              with:
-                  #                path: |
-                  #                    ./wabt/build
-                  #                key: ${{ env.WABT_CACHE }}
+            - name: Build from source
+              run: |
+                git clone --recursive https://github.com/TOPLLab/wabt
+                cd wabt
+                git submodule update --init
+                mkdir build; cd build
+                cmake ..
+                cmake --build .
+            
+            - name: Update $PATH
+              run: echo "${GITHUB_WORKSPACE}/${{env.WORKING_DIRECTORY}}/wabt/build" >> $GITHUB_PATH
+            
+            - name: Echo $PATH
+              run: echo $PATH
+
+            - name: Cache build files
+              id: cache_wabt
+              uses: actions/cache@v2
+              with:
+                path: |
+                    ${{ env.WORKING_DIRECTORY }}/wabt/build
+                key: ${{ env.WABT_CACHE }}
 
     test:
         name: Mocha Test Suites
-        #        needs: build-wabt
+        needs: build-wabt
         runs-on: ubuntu-latest
     
         steps:
@@ -86,31 +81,19 @@ jobs:
             - name: Install Node.js dependencies
               run: npm ci
 
-              #            - name: Get WABT cache
-              #              id: cache_wabt
-              #              uses: actions/cache@v2
-              #              with:
-              #                path: |
-              #                    ./wabt/build
-              #                key: ${{ env.WABT_CACHE }}
+            - name: Get WABT cache
+              id: cache_wabt
+              uses: actions/cache@v2
+              with:
+                path: |
+                    ${{ env.WORKING_DIRECTORY }}/wabt/build
+                key: ${{ env.WABT_CACHE }}
 
-            - name: Build from source
-              run: |
-                git clone --recursive https://github.com/TOPLLab/wabt
-                cd wabt
-                git submodule update --init
-                mkdir build; cd build
-                cmake ..
-                cmake --build .
-            
             - name: Update $PATH
-              run: echo "${GITHUB_WORKSPACE}/${WORKING_DIRECTORY}/wabt/build" >> $GITHUB_PATH
-
-            - name: Echo $PATH
-              run: echo $PATH
+              run: echo "${GITHUB_WORKSPACE}/${{env.WORKING_DIRECTORY}}/wabt/build" >> $GITHUB_PATH
 
             - name: Check wat2wasm
-              run: ls ./wabt/build/
+              run: wat2wasm --version
 
             - name: Run tests
               run: npm run unit-test
