--- a/ESPWASM/main/CMakeLists.txt
+++ b/ESPWASM/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOURCE_FILES Memory/mem.cpp Utils/util.cpp Utils/util_arduino.cpp Debug/debugger.cpp Utils/macros.cpp WARDuino/WARDuino.cpp Primitives/primitives.cpp Interpreter/instructions.cpp)
+set(SOURCE_FILES Memory/mem.cpp Utils/util.cpp Utils/util_arduino.cpp Debug/debugger.cpp Utils/macros.cpp WARDuino/WARDuino.cpp Primitives/primitives.cpp Interpreter/instructions.cpp WARDuino/CallbackHandler.cpp)
 
 idf_component_register(SRCS "CLI/main.cpp" ${SOURCE_FILES} INCLUDE_DIRS "")
 
