--- a/ESPWASM/main/CMakeLists.txt
+++ b/ESPWASM/main/CMakeLists.txt
@@ -4,5 +4,6 @@ idf_component_register(SRCS "CLI/main.cpp" ${SOURCE_FILES} INCLUDE_DIRS "")
 
 add_definitions(-DINFO=0)
 add_definitions(-DDEBUG=0)
-add_definitions(-DTRACE=1)
+add_definitions(-DTRACE=0)
 add_definitions(-DWARN=0)
+add_definitions(-DESP=1)
