--- a/vs-debugger/package.json
+++ b/vs-debugger/package.json
@@ -79,10 +79,12 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@vscode/test-electron": "^2.1.2",
+    "electron-rebuild": "^3.2.7",
     "eslint": "^8.9.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.1",
     "path-browserify": "^1.0.1",
+    "serialport": "^10.4.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "vsce": "^2.5.1",
