Move ESPWASM to root + fix project structure for Arduino

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,42 @@
-cmake_minimum_required(VERSION 3.14)
-project(WARDuino)
+# The following lines of boilerplate have to be in your project's
+# CMakeLists in this exact order for cmake to work correctly
+cmake_minimum_required(VERSION 3.5)
+option(BUILD_ESP "Build for esp" ON)
+option(BUILD_EMULATOR "Build for emulator" OFF)
 
-add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
-set(SOURCE_FILES mem.cpp util.cpp util_arduino.cpp interrupt_operations.cpp debug.cpp WARDuino.cpp primitives.cpp instructions.cpp glue.cpp glue.h)
-set(TEST_SOURCE_FILES tests/integration/assertion.cpp tests/integration/sexpr-parser/src/sexpr.c tests/integration/wasm_tests.cpp tests/integration/wasm_tests.h)
+# Build WARDuino with the ESP-IDF toolchain
+if (BUILD_ESP)
+    if (NOT EXISTS $ENV{IDF_PATH}/tools/cmake/project.cmake)
+        message(FATAL_ERROR "Can't find $IDF_PATH/tools/cmake/project.cmake. Make sure ESP-IDF is installed and $IDF_PATH is set.")
+    endif ()
+    
+    set(EXTRA_COMPONENT_DIRS "platforms")
 
-#add_definitions(-DARDUINO)
-add_definitions(-DINFO=0)
-add_definitions(-DDEBUG=0)
-add_definitions(-DTRACE=0)
-add_definitions(-DWARN=0)
-add_definitions(-DTEST=1) # compile CLI with spectest functionality
+    include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+endif (BUILD_ESP)
 
-# WARDuino Library
-add_executable(WARDuino demo/run_wa/main.cpp ${SOURCE_FILES})
+project(hello_world)
 
-# WARDuino CLI
-add_executable(warduino cli/main.cpp ${SOURCE_FILES} ${TEST_SOURCE_FILES})
+# Build the emulator version of WARDuino
+if (BUILD_EMULATOR)
+    find_package(Threads REQUIRED)
+    set(SOURCE_FILES
+            src/Memory/mem.cpp
+            src/Utils/util.cpp
+            src/Utils/util_arduino.cpp
+            src/Debug/debugger.cpp
+            src/Utils/macros.cpp
+            src/WARDuino/WARDuino.cpp
+            src/WARDuino/CallbackHandler.cpp
+            src/Primitives/primitives.cpp
+            src/Interpreter/instructions.cpp
+            )
 
-# WARDuino Benchmarks
-add_executable(WARDuinoBench benchmarks/benchmarks.cpp ${SOURCE_FILES})
-install(TARGETS WARDuino DESTINATION demo/run_wa/bin)
-
-add_custom_command(
-        TARGET WARDuinoBench
-        POST_BUILD
-        COMMAND make -C ../benchmarks/tasks all
-)
+    add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
+    add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES})
+    target_link_libraries(wdcli PRIVATE Threads::Threads)
+    add_definitions(-DINFO=0)
+    add_definitions(-DDEBUG=0)
+    add_definitions(-DTRACE=1)
+    add_definitions(-DWARN=0)
+endif (BUILD_EMULATOR)
