--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=WARDuino
 version=0.9.2
-author=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>, Joel Martin <github@martintribe.org>
-maintainer=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>
+author=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>, Tom Lauwaerts <Tom.Lauwaerts@UGent.be>, Joel Martin <github@martintribe.org>
+maintainer=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>, Tom Lauwaerts <Tom.Lauwaerts@UGent.be>
 sentence=A library that enables the use of WebAssembly on Arduino boards with debugging support
 paragraph=
 category=Communication
-url=http://example.com/
+url=https://github.com/TOPLLab/WARDuino
 architectures=esp8266,esp32
