--- a/vs-debugger/.vscode/launch.json
+++ b/vs-debugger/.vscode/launch.json
@@ -55,6 +55,20 @@
                 "${workspaceFolder}/src/test/UnitTests/**/*.ts"
             ],
             "internalConsoleOptions": "openOnSessionStart"
+        },
+		{
+            "type": "node",
+            "request": "launch",
+            "name": "Debug Bridge Unit Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--require", "ts-node/register",
+                "-u", "tdd",
+                "--timeout", "999999",
+                "--colors",
+                "${workspaceFolder}/src/test/UnitTests/TestDebuggerBridge.ts"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
         }
 	]
 }
