Add expects to tests + format

--- a/platforms/Arduino/Makefile
+++ b/platforms/Arduino/Makefile
@@ -1,8 +1,8 @@
 flash: 
-		arduino-cli upload -p /dev/cu.usbserial-1410  --fqbn esp32:esp32:esp32wrover Arduino.ino
+		arduino-cli upload -p /dev/ttyUSB0  --fqbn esp32:esp32:esp32wrover Arduino.ino
 
 compile: 
 	arduino-cli -v compile --fqbn esp32:esp32:esp32wrover Arduino.ino
 
 monitor: 
-		arduino-cli monitor -p /dev/cu.usbserial-1410  -c baudrate=115200
+		arduino-cli monitor -p /dev/ttyUSB0  -c baudrate=115200
