--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
                 python-version: "3.x"
             - name: Build warduino cli
               run: cmake . ; cmake --build . --target warduino
+              working-directory: platforms/CLI-Emulator
             - name: Build WABT  # Build latest version
               run: |
                 git clone --recursive https://github.com/WebAssembly/wabt
@@ -31,4 +32,4 @@ jobs:
             - name: Install Python dependencies
               run: pip install -r requirements.txt
             - name: Clone and run tests
-              run: ./tests/integration/run_spec_tests.py --compiler "./wabt/build/wat2wasm" --interpreter "./warduino" --ignore "./tests/integration/ignore.txt"
+              run: ./tests/integration/run_spec_tests.py --compiler "./wabt/build/wat2wasm" --interpreter "./platforms/CLI-Emulator/warduino" --ignore "./tests/integration/ignore.txt"
