--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # The following lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
-option(BUILD_ESP "Build for esp" ON)
+option(BUILD_ESP "Build for esp" OFF)
 option(BUILD_EMULATOR "Build for emulator" OFF)
 
 # Build WARDuino with the ESP-IDF toolchain
@@ -15,10 +15,12 @@ if (BUILD_ESP)
     include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 endif (BUILD_ESP)
 
-project(hello_world)
+project(WARDuino)
 
 # Build the emulator version of WARDuino
 if (BUILD_EMULATOR)
+    cmake_minimum_required(VERSION 3.14)
+
     find_package(Threads REQUIRED)
     set(SOURCE_FILES
             src/Memory/mem.cpp
@@ -31,12 +33,19 @@ if (BUILD_EMULATOR)
             src/Primitives/primitives.cpp
             src/Interpreter/instructions.cpp
             )
+    set(TEST_FRAMEWORK
+        tests/integration/wasm_tests.cpp
+        tests/integration/assertion.cpp
+        tests/integration/sexpr-parser/src/sexpr.c
+        )
 
-    add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
-    add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES})
-    target_link_libraries(wdcli PRIVATE Threads::Threads)
     add_definitions(-DINFO=0)
     add_definitions(-DDEBUG=0)
-    add_definitions(-DTRACE=1)
+    add_definitions(-DTRACE=0)
     add_definitions(-DWARN=0)
+
+    # WARDuino CLI
+    add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
+    add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES} ${TEST_FRAMEWORK})
+    target_link_libraries(wdcli PRIVATE Threads::Threads)
 endif (BUILD_EMULATOR)
