--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,11 +13,14 @@ jobs:
             - uses: actions/checkout@v2
               with:
                 submodules: recursive
+
             - uses: actions/setup-python@v2
               with:
                 python-version: "3.x"
+
             - name: Build warduino cli
-              run: cmake . ; cmake --build . --target wdcli
+              run: cmake . -D BUILD_EMULATOR=ON ; cmake --build .
+
             - name: Build WABT  # Build latest version
               run: |
                 git clone --recursive https://github.com/WebAssembly/wabt
@@ -26,9 +29,13 @@ jobs:
                 mkdir build; cd build
                 cmake ..
                 cmake --build .
+
             - name: Verify wat2wasm
               run: ./wabt/build/wat2wasm --version
+
             - name: Install Python dependencies
               run: pip install -r requirements.txt
+
             - name: Clone and run tests
-              run: ./tests/integration/run_spec_tests.py --compiler "./wabt/build/wat2wasm" --interpreter "./platforms/CLI-Emulator/warduino" --ignore "./tests/integration/ignore.txt"
+              run: ./tests/integration/run_spec_tests.py --compiler "./wabt/build/wat2wasm" --interpreter "./wdcli" --ignore "./tests/integration/ignore.txt"
+
