Fix GitHub Actions
Fix macos compilation
Remove windows compilation - just use wsl
Fix fac_ok.wast syntax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,12 @@ if (BUILD_EMULATOR)
     add_definitions(-DTRACE=0)
     add_definitions(-DWARN=0)
 
+    # Use C++11
+    set(CMAKE_CXX_STANDARD 11)
+
     # Set default compile flags for GCC
     if(CMAKE_COMPILER_IS_GNUCXX)
-        add_compile_options(-g -v -std=c++11 -Wall -Wextra -Wunused)
+        add_compile_options(-g -v -Wall -Wextra -Wunused)
     endif(CMAKE_COMPILER_IS_GNUCXX)
 
     # WARDuino CLI
