--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,7 +28,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
+                os: [ubuntu-18.04, ubuntu-20.04, macos-latest]
         steps:
             - name: Checkout
               uses: actions/checkout@v2
