Update blink example

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,19 @@ build/
 cmake-build-*
 build*
 
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
 # MacOS
 .DS_Store
 .AppleDouble
