--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,6 +12,7 @@ jobs:
     formatting-check:
         name: Formatting Check
         runs-on: ubuntu-latest
+        if: github.event.pull_request.draft == false
         steps:
             - uses: actions/checkout@v2
             - name: Run clang-format style check for C/C++ programs.
