--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -56,6 +56,8 @@ jobs:
                 - name: HTTPClient
                 - name: PubSubClient
                 - name: Adafruit NeoPixel
+                - name: FreeRTOS
+                - source-url: https://github.com/me-no-dev/AsyncTCP.git
         strategy:
             fail-fast: false
             matrix:
